<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper_project2.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/pitch" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="#A6263238"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/team_a"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="34sp" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/score_team_a"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="addForTeamA"
                        android:text="@string/goal_team_a"
                        android:textColor="#FFFFFF" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end">

                            <ImageButton
                                android:layout_width="40dp"
                                android:layout_height="52dp"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="8dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:background="@drawable/yellow_card"
                                android:onClick="addYellowTeamA"
                                android:scaleType="centerCrop" />

                            <TextView
                                android:id="@+id/team_a_yellow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="@string/yellow_team_a"
                                android:textColor="#FFFFFF"
                                android:textSize="34sp" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end">

                            <ImageButton
                                android:layout_width="40dp"
                                android:layout_height="52dp"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="8dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:background="@drawable/red_card"
                                android:onClick="addRedTeamA"
                                android:scaleType="centerCrop" />

                            <TextView
                                android:id="@+id/team_a_red"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="@string/red_team_a"
                                android:textColor="#FFFFFF"
                                android:textSize="34sp" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="52dp"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="8dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:onClick="addPenaltyTeamA"
                                android:text="@string/penalty_a"
                                android:textColor="#FFFFFF" />

                            <TextView
                                android:id="@+id/team_a_penalty"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="@string/penalty_team_a"
                                android:textColor="#FFFFFF"
                                android:textSize="34sp" />

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="120sp"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:background="#FFFFFF" />


                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/ball2" />

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:background="#FFFFFF" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/team_b"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="34sp" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/score_team_b"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="addForTeamB"
                        android:text="@string/goal_team_b"
                        android:textColor="#FFFFFF" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start">

                            <TextView
                                android:id="@+id/team_b_yellow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="8dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="@string/yellow_team_b"
                                android:textColor="#FFFFFF"
                                android:textSize="34sp" />

                            <ImageButton
                                android:layout_width="40dp"
                                android:layout_height="52dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginTop="8dp"
                                android:background="@drawable/yellow_card"
                                android:onClick="addYellowTeamB"
                                android:scaleType="centerCrop" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start">

                            <TextView
                                android:id="@+id/team_b_red"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="8dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="@string/red_team_b"
                                android:textColor="#FFFFFF"
                                android:textSize="34sp" />

                            <ImageButton
                                android:layout_width="40dp"
                                android:layout_height="52dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginTop="8dp"
                                android:background="@drawable/red_card"
                                android:onClick="addRedTeamB"
                                android:scaleType="centerCrop" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="52dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginTop="8dp"
                                android:onClick="addPenaltyTeamB"
                                android:text="@string/penalty_b"
                                android:textColor="#FFFFFF" />

                            <TextView
                                android:id="@+id/team_b_penalty"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="8dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="@string/penalty_team_b"
                                android:textColor="#FFFFFF"
                                android:textSize="34sp" />

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="resetScore"
                android:padding="20dp"
                android:text="@string/reset"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>